--- a/ProyectoAsync/Pinterest/index.html
+++ b/ProyectoAsync/Pinterest/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="module" src="./main.js" defer></script>
+    <title>Pinterest Lookalike</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <header class="flex-header">
+    </header>
+    <main id="app">
+
+    </main>
+    <script type="module" src="/main.js">
   </body>
 </html>
