--- a/ProyectoAsync/Pinterest/index.html
+++ b/ProyectoAsync/Pinterest/index.html
@@ -2,18 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./pinterest-seeklogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./main.js" defer></script>
-    <title>Pinterest Lookalike</title>
+    <title>Pinterest</title>
   </head>
   <body>
-    <header class="flex-header">
+    <header>
+      <section class="flex-header">
+        <div> <img src="./pinterest-seeklogo.svg" alt="Pinterest logo" id="header-logo"></div>
+        <ul class="flex-header">
+          <li>Inicio</li>
+          <li>Hoy</li>
+          <li>Crear</li>
+          <input type="text" placeholder="Buscar..." id="search-bar">
+          <div class="flex-header">
+            <a href="#"><img src="./Assets/notifications_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
+            <a href="#"><img src="./Assets/chat_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
+            <a href="#"><img src="./Assets/face_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
+          </div>
+        </ul>
+      </section>
     </header>
     <main id="app">
-
+      
     </main>
-    <script type="module" src="/main.js">
+    <footer></footer>
   </body>
 </html>
