--- a/Proyecto_2/index.html
+++ b/Proyecto_2/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OrangX</title>
+    <link rel="shortcut icon" href="./Assets/estudiante.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <script type="module" src="./index.js" defer></script>
-    <title>OrangX</title>
 </head>
 <body>
     <section id="naranjitos">
-
     </section>
+    <div id="publicar">
+    </div>
 </body>
 </html>
