--- a/ProyectoAsync/Pinterest/index.html
+++ b/ProyectoAsync/Pinterest/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./pinterest-seeklogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="./main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
     <title>Pinterest</title>
   </head>
   <body>
@@ -16,7 +16,9 @@
           <li>Inicio</li>
           <li>Hoy</li>
           <li>Crear</li>
-          <input type="text" placeholder="Buscar..." id="search-bar">
+          <form action="">
+            <input type="text" placeholder="Search whatever you like..." id="search__bar">
+          </form>
           <div class="flex-header">
             <a href="#"><img src="./Assets/notifications_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
             <a href="#"><img src="./Assets/chat_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
@@ -26,7 +28,21 @@
       </section>
     </header>
     <main id="app">
-      
+
+      <section class="search__results">
+        <div class="search__result">
+          <img src="./Assets/image1.jpg" alt="Edificio en blanco y negro">
+        </div>
+        <div class="search__result">
+          <img src="./Assets/image1.jpg" alt="Edificio en blanco y negro">
+        </div>
+        <div class="search__result">
+          <img src="./Assets/image1.jpg" alt="Edificio en blanco y negro">
+        </div>
+      </section>
+
+
+      <button id="show__more">Show More</button>
     </main>
     <footer></footer>
   </body>
