--- a/ProyectoAsync/Pinterest/index.html
+++ b/ProyectoAsync/Pinterest/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <section class="flex-header">
+      <!-- <section class="flex-header">
         <div> <img src="./pinterest-seeklogo.svg" alt="Pinterest logo" id="header-logo"></div>
         <ul class="flex-header">
           <li>Inicio</li>
@@ -25,11 +25,11 @@
             <a href="#"><img src="./Assets/face_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="header-img"></a>
           </div>
         </ul>
-      </section>
+      </section> -->
     </header>
     <main id="app">
 
-      <section class="search__results">
+      <!-- <section class="search__results">
         <div class="search__result">
           <img src="./Assets/image1.jpg" alt="Edificio en blanco y negro">
         </div>
@@ -42,7 +42,7 @@
       </section>
 
 
-      <button id="show__more">Show More</button>
+      <button id="show__more">Show More</button> -->
     </main>
     <footer></footer>
   </body>
